# weaver

./: .dockerignore  .env  .env.backup.20250821_160651  .env.example  .env.fixed  .env.middleware  .env.new  .env.production.example  .gitignore  .pre-commit-config.yaml  ADVANCED_RAG_DESIGN.md  ADVANCED_RAG_README.md  ARCHITECTURE_CLEANUP_REPORT.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SUMMARY.md  AUTO_INGEST_FEATURE.md  CELERY_SETUP.md  CHAGELOG.md  CHANGELOG.md  CHINESE_OUTPUT.md  CLAUDE.md  CLEAN_ARCHITECTURE_README.md  CLI_README.md  CLOUD_JOB_RUNNER.md  CLOUD_QUICKSTART.md  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  CONFIG.md  CONFIGURATION.md  CONFIG_REFACTOR_PLAN.md  CONTRIBUTING.md  DDD_TO_MODULAR_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DOCKER-DEPLOYMENT.md  DOCKER-README.md  DOCKER_FIXES.md  Dockerfile  Dockerfile.api  ELASTICSEARCH_SETUP.md  (+134 more)
app/backend/: AUTOMATIC_MIGRATION.md  Dockerfile  FIX_MIGRATION.sql  MIGRATION_FIX_GUIDE.md  MIGRATION_STUCK_FIX.md  QUICK_FIX.md  README.md  alembic.ini  debug_thumbnail.py  docker-compose.yml  env.example  pyproject.toml  run_verification.py  start.sh  verify_custom_models.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20241126_000001_initial_schema.py  20241127_000001_add_file_path_to_documents.py  20241127_000002_add_data_column_to_canvases.py  20241128_000001_add_chat_messages_table.py  20241128_000002_add_task_queue_and_graph_tables.py  20241128_000003_add_graph_status.py  20241202_000001_add_curriculum_table.py  20241202_000002_add_tsvector_for_hybrid_search.py  20241202_000003_add_evaluation_log.py  20241204_000001_add_environment_to_task_queue.py  20241204_000002_add_long_context_fields.py  20241204_000003_add_canvas_version.py  20241207_000001_add_document_summary.py  20241207_000002_add_settings_tables.py  20241208_000001_add_user_settings_table.py  20241209_000001_add_chat_memory_tables.py  20241209_000002_add_chat_sessions.py  20241211_000001_add_canvas_project_id_index.py  20241211_000002_change_ivfflat_to_hnsw.py  20241211_000003_add_pending_cleanups_table.py  20241213_000001_add_document_progress_fields.py  20241213_000002_add_missing_document_columns.py  20241213_000003_add_highlights_table.py  20241224_000001_add_outputs_table.py  20241229_000001_add_thumbnail_columns.py  20241230_000001_extend_highlights_model.py  20241230_000002_add_comments_table.py  20241230_000003_add_inbox_tables.py  20250107_000001_add_url_contents_table.py  20250107_000002_add_project_id_to_url_contents.py  20250107_000003_add_context_refs_to_chat_messages.py  20260108_000001_drop_curriculum_table.py  20260110_000001_add_user_id_to_projects.py  20260111_000001_rename_outputs_document_ids_to_source_ids.py  20260113_000001_create_resource_chunks_table.py  20260113_000002_remove_chat_sessions.py  20260114_000001_initial_schema.py  20260114_213446_add_custom_models_table.py
app/backend/docs/: CONFIGURATION.md  RAG_EVALUATION.md
app/backend/docs/api/: delete_project.md
app/backend/docs/architecture/: async_file_deletion.md
app/backend/modal_ocr/: README.md  __init__.py  app.py  deploy.py  utils.py  verify_setup.py
app/backend/scripts/: check_imports.py  clear_rag_mode_setting.py  fix-alembic-state.sh  fix-alembic-version.sql  fix-migration-auto.py  fix-missing-file-path.sql  fix-production-schema.sql  get-latest-revision.py  quick-fix-migration.sh  reprocess_document.py  smart-migrate.sh  start-prod.sh  start-worker.sh  test_redis_connection.py  verify_qdrant.py
app/backend/src/research_agent/: __init__.py  config.py  main.py
app/backend/src/research_agent/api/: __init__.py  deps.py  errors.py  middleware.py
app/backend/src/research_agent/api/auth/: __init__.py  supabase.py  websocket_auth.py
app/backend/src/research_agent/api/v1/: api_keys.py  canvas.py  chat.py  curriculum.py  custom_models.py  documents.py  inbox.py  maintenance.py  outputs.py  projects.py  router.py  settings.py  tags.py  thinking_path.py  url.py  verify_relation.py  websocket.py
app/backend/src/research_agent/application/: __init__.py
app/backend/src/research_agent/application/agents/: rag_agent.py  rag_memory.py  rag_tools.py
app/backend/src/research_agent/application/dto/: __init__.py  api_key.py  auth.py  canvas.py  chat.py  curriculum.py  document.py  inbox.py  output.py  project.py  tag.py  url_content.py
app/backend/src/research_agent/application/graphs/: __init__.py  mindmap_graph.py  rag_graph.py  rag_graph_v2.py
app/backend/src/research_agent/application/prompts/: thinking_path_extraction.py
app/backend/src/research_agent/application/services/: __init__.py  async_cleanup_service.py  async_post_processor.py  output_generation_service.py  thinking_path_service.py
app/backend/src/research_agent/domain/agents/: __init__.py  action_list_agent.py  article_agent.py  base_agent.py  debate_agent.py  flashcard_agent.py  mindmap_agent.py  summary_agent.py  synthesis_agent.py  synthesis_prompts.py
app/backend/src/research_agent/domain/entities/: __init__.py  canvas.py  chat.py  chunk.py  config.py  curriculum.py  document.py  graph.py  output.py  project.py  resource.py  resource_chunk.py  task.py  thinking_path.py
app/backend/src/research_agent/domain/services/: __init__.py  (+24 more)
app/backend/src/research_agent/infrastructure/: __init__.py  resource_resolver.py
app/backend/src/research_agent/shared/: __init__.py  exceptions.py  types.py
app/backend/src/research_agent/utils/: __init__.py  text_locator.py
app/backend/src/research_agent/worker/: __init__.py  arq_config.py  arq_main.py  dispatcher.py  service.py  worker.py
app/backend/tests/: conftest.py
app/backend/tests/integration/: test_canvas.py  test_projects.py  test_prompt_migration.py
app/backend/tests/unit/: test_auth_anon.py  test_context_engine_rollback.py  test_conversation_context.py  test_delete_project.py  test_entities.py  test_mindmap_graph.py  test_prompt_loader.py  test_source_annotator.py  test_ssrf_protection.py  test_supabase_auth.py  test_synthesis_agent.py  test_url_extractor.py
app/backend/tests/unit/vector_store/: test_user_isolation.py
(+1855 files in other folders)
