[tool.poetry]
name = "research-agent-rag"
version = "0.1.0"
description = "A multi-agent research system that combines RAG with specialized AI agents to analyze academic papers"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<4.0"
# Core dependencies
openai = "^1.0.0"
anthropic = "^0.25.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
aiohttp = "^3.9.0"
httpx = {extras = ["socks"], version = "^0.25.0"}

# arXiv and paper processing
arxiv = "^2.0.0"
beautifulsoup4 = "^4.12.0"

# Vector database and embeddings
chromadb = "^0.4.0"
sentence-transformers = "^2.2.0"

# Data processing
numpy = "^1.24.0"
pandas = "^2.0.0"

# LangChain ecosystem
langchain = "^0.1.0"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.5"
langchain-anthropic = "^0.1.0"

# Web interface
streamlit = "^1.29.0"

# Optional: Future API server
fastapi = {version = "^0.104.0", optional = true}
uvicorn = {version = "^0.24.0", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn"]
all = ["fastapi", "uvicorn"]

[tool.poetry.group.dev.dependencies]
# Development tools
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

# Documentation
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"

# Testing and coverage
coverage = "^7.3.0"
pytest-cov = "^4.1.0"

# Scripts removed - using package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agents", "database", "retrieval", "chat", "examples", "config"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "examples/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]